[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stroop.gd" type="Script" id=1]
[ext_resource path="res://OpenDyslexic/OpenDyslexic-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://buttons/grey_button00.png" type="Texture" id=3]
[ext_resource path="res://buttons/grey_button05.png" type="Texture" id=4]
[ext_resource path="res://buttons/grey_button02.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 59
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Stroop" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.345098, 0.490196, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texto" type="Label" parent="."]
margin_left = 261.0
margin_top = 18.0
margin_right = 1029.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )
text = "Reconhecimento de Cor:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerArea" type="ColorRect" parent="."]
margin_top = 570.0
margin_right = 1280.0
margin_bottom = 720.0
rect_scale = Vector2( 1, 1.03984 )
color = Color( 0.709804, 0.866667, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B1" type="TextureButton" parent="PlayerArea"]
margin_left = 210.0
margin_top = 44.0
margin_right = 400.0
margin_bottom = 89.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerArea/B1"]
margin_left = 49.0
margin_top = -1.0
margin_right = 139.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRETO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2" type="TextureButton" parent="PlayerArea"]
margin_left = 450.0
margin_top = 44.0
margin_right = 640.0
margin_bottom = 89.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerArea/B2"]
margin_left = 60.9999
margin_top = -2.0
margin_right = 151.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ROSA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B3" type="TextureButton" parent="PlayerArea"]
margin_left = 688.0
margin_top = 44.0
margin_right = 878.0
margin_bottom = 89.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerArea/B3"]
margin_left = 60.0
margin_top = -2.0
margin_right = 150.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AZUL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B4" type="TextureButton" parent="PlayerArea"]
margin_left = 934.0
margin_top = 44.0
margin_right = 1124.0
margin_bottom = 89.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerArea/B4"]
margin_left = 55.0
margin_top = -1.0
margin_right = 145.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "VERDE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab" type="Label" parent="PlayerArea"]
margin_left = 1165.0
margin_top = 11.0
margin_right = 1255.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "Etapa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="etapa" type="Label" parent="PlayerArea/lab"]
margin_left = 14.0
margin_top = 28.0
margin_right = 104.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
text = "1/4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab2" type="Label" parent="PlayerArea"]
visible = false
margin_left = 53.0
margin_top = 13.0
margin_right = 143.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tempo" type="Label" parent="PlayerArea/lab2"]
visible = false
margin_left = 14.0
margin_top = 28.0
margin_right = 104.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="PlayerArea/lab2/tempo"]
[connection signal="pressed" from="PlayerArea/B1" to="." method="_on_B1_pressed"]
[connection signal="pressed" from="PlayerArea/B2" to="." method="_on_B2_pressed"]
[connection signal="pressed" from="PlayerArea/B3" to="." method="_on_B3_pressed"]
[connection signal="pressed" from="PlayerArea/B4" to="." method="_on_B4_pressed"]
[connection signal="timeout" from="PlayerArea/lab2/tempo/Timer" to="." method="_on_Timer_timeout"]
